# MYpet

./: .env.example  .gitignore  README.md  config.example.yaml  generate_ai_sprites.py  generate_preview.py  generate_sprites.py  mypet_cli.py  pyproject.toml  requirements.txt  run.py  灵感来源以及设计.txt
.claude/skills/mypet/: SKILL.md
assets/sprites/codex_pet/: manifest.json
assets/sprites/default/: manifest.json
src/: app.py
src/ai/: base_provider.py  openai_provider.py  status_monitor.py
src/animation/: sprite_engine.py  sprite_loader.py
src/core/: config_manager.py  event_bus.py  pet_window.py  state_machine.py
src/interaction/: chat_bubble.py  chat_window.py
src/monitor/: __init__.py  keyword_rules.py  socket_server.py  terminal_monitor.py
